# CorridorKeyFork

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml  requirements.txt  ruff.toml  zensical.toml
.github/workflows/: pr-ci.yml
.kiro/skills/audit/: SKILL.md
.kiro/skills/fix-code/: SKILL.md
.kiro/skills/fix-logging/: SKILL.md
.kiro/skills/update-docs/references/: principle-6-structure-uniformity.md
.kiro/skills/update-docstrings/: SKILL.md
.kiro/skills/write-tests/: SKILL.md
decisions/: 0000-adr-template.md
docs/: index.md
docs/api/corridorkey-cli/: doctor.md  index.md  process.md  wizard.md
docs/corridorkey/: clip-state.md  configuration-layers.md  configuration.md  index.md  job-queue.md
docs/corridorkey-cli/: architecture.md  commands.md  index.md
docs/corridorkey-cli/reference/: config.md  index.md
docs/corridorkey/integration/: error-handling.md  events.md  frame-loop.md  index.md  multi-gpu-runner.md  pipeline-runner.md  runner.md  startup.md
docs/corridorkey/pipeline/: index.md  inference.md  loader.md  postprocessor.md  preprocessor.md  scanner.md  writer.md
docs/corridorkey/reference/: clip-state.md  configuration.md  device-utils.md  events.md  index.md  job-queue.md  model-hub.md  pipeline.md
docs/dev/: authoring-documentation.md  developer-setup.md  index.md  naming-conventions.md
docs/dev/api/corridorkey/: configuration.md  device-utils.md  errors.md  index.md  pipeline.md
docs/dev/api/corridorkey-cli/: config.md  helpers.md  index.md  init.md  reset.md  scan.md  wizard.md
docs/dev/api/corridorkey-core/: index.md
docs/dev/contributing/: authoring-documentation.md  naming-conventions.md
docs/dev/contributing/documentation-principles/: principle-4-link-to-code.md
docs/dev/setup/: index.md
docs/guide/: first-run.md  index.md  installation.md  outputs.md  preparing-clips.md  processing.md  troubleshooting.md
docs/knowledge/: index.md
docs/knowledge/configuration/: index.md
docs/knowledge/pipeline/: alpha-matting.md  colour-space.md  green-spill.md  index.md  neural-network.md
installers/: install.ps1  install.sh  install_local.ps1  install_local.sh
scripts/: check_ascii.py  fix_ascii.py  profile_engine.py
