[project]
name = "corridorkey-workspace"
version = "2.0.0"
description = "AI Green Screen Keyer by Corridor Digital"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.13, <3.14"
readme = "README.md"
authors = [{ name = "Corridor Digital" }]
maintainers = [{ name = "Rajesh Das", email = "rajesh@hyperoot.dev" }]
dependencies = []

[project.optional-dependencies]
cuda = ["corridorkey-new[cuda]"]
mlx = ["corridorkey-new[mlx]"]
rocm = ["corridorkey-new[rocm] ; sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "ckcli>=0.1.0",
    "corridorkey-new>=0.1.0",
    "git-cliff>=2.12.0",
    "hypothesis>=6.151.9",
    "prek>=0.3.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "shellcheck-py>=0.11.0.1",
    "ty>=0.0.21",
]
docs = ["mkdocstrings[python]>=1.0.3", "zensical>=0.0.26"]

[tool.pytest.ini_options]
markers = [
    "gpu: requires CUDA GPU (skipped in CI)",
    "slow: long-running test",
    "mlx: requires Apple Silicon with MLX installed",
]
addopts = "--tb=short --import-mode=importlib"

[tool.coverage.run]
omit = [
    # Hardware-dependent modules - require real GPU/FFmpeg/filesystem
    "*/corridorkey_new/stages/inference/backend.py",
]

[tool.coverage.report]
fail_under = 75

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
conflicts = [
    [
        { extra = "cuda" },
        { extra = "mlx" },
    ],
    [
        { extra = "cuda" },
        { extra = "rocm" },
    ],
    [
        { extra = "rocm" },
        { extra = "mlx" },
    ],
]

[tool.uv.sources]
corridorkey-new = { workspace = true }
ckcli = { workspace = true }
